# SPELL

./: Makefile.am  NEWS  README  common.mk  configure.ac  exclude.list  py-compiledir
config/: .project  Makefile.am
config/contexts/: context_STD.xml
config/gui/: config.xml
config/server/: server.xml
config/spell/: language.xml  log.properties
doc/: .project  Doxyfile  Doxyfile_begin  Doxyfile_end  Makefile.am
drivers/example/: .project  .pydevproject  Makefile.am
drivers/example/config/: driver_example.xml
drivers/example/src/: __init__.py  config.py  constants.py  ev.py  gcstime.py  modifiers.py  resources.py  task.py  tc.py  tm.py  usr.py
drivers/standalone/: .project  .pydevproject  Makefile.am
drivers/standalone/config/: driver_standalone.xml
drivers/standalone/src/: config.py  constants.py  ev.py  gcstime.py  memory.py  modifiers.py  ranging.py  resources.py  task.py  tc.py  tm.py  usr.py
lib/: Makefile.am  create_lib_makefile_am.sh
lib/SPELL_CFG/: .cproject  .project  Makefile.am
lib/SPELL_CFG/src/: SPELLbrowsableLibMode.C  SPELLconfiguration.C  SPELLcontextConfig.C  SPELLdriverConfig.C  SPELLexecutorDefaults.C  SPELLxmlConfigReaderFactory.C  SPELLxmlConfigReaderXC.C
lib/SPELL_CIF/: .cproject  .project  Makefile.am
lib/SPELL_CIF/src/: SPELLasRun.C  SPELLcif.C  SPELLcifHelper.C  SPELLcifPython.C  SPELLnotifications.C
lib/SPELL_CIFC/: .cproject  .project  Makefile.am
lib/SPELL_CIFC/src/: SPELLautomaticCif.C  SPELLncursesShell.C  SPELLstandaloneCif.C
lib/SPELL_CIFS/: .cproject  .project  Makefile.am
lib/SPELL_CIFS/src/: SPELLcifPromptHelper.C  SPELLdisplayBuffer.C  SPELLrequestProcessor.C  SPELLserverCif.C  SPELLvariableBuffer.C
lib/SPELL_CTX/: .cproject  .project  Makefile.am
lib/SPELL_CTX/src/: SPELLclient.C  SPELLclientIPC.C  SPELLclientInterestList.C  SPELLclientManager.C  SPELLclientNotifier.C  SPELLcontext.C  SPELLdataHelper.C  SPELLdataTable.C  SPELLexecutor.C  SPELLexecutorIPC.C  SPELLexecutorManager.C  SPELLexecutorModel.C  SPELLexecutorOperation.C  SPELLlistenerIPC.C  SPELLpersistencyTable.C  SPELLsharedData.C
lib/SPELL_DTA/: .cproject  .project  Makefile.am
lib/SPELL_DTA/src/: SPELLdtaContainer.C  SPELLdtaContainerObjectMethods.C  SPELLdtaModule.C  SPELLdtaVariable.C  SPELLdtaVariableObjectMethods.C
lib/SPELL_EXC/: .cproject  .project  Makefile.am
lib/SPELL_EXC/src/: SPELLastAnalyzer.C  SPELLbreakpoint.C  SPELLbreakpointType.C  SPELLbytecode.C  SPELLcallstack.C  SPELLchildManager.C  SPELLcodeTreeLine.C  SPELLcodeTreeNode.C  SPELLcommandMailbox.C  SPELLcontroller.C  SPELLexecutionModel.C  SPELLexecutionTrace.C  SPELLexecutor.C  SPELLexecutorConfiguration.C  SPELLexecutorImpl.C  SPELLexecutorPython.C  SPELLexecutorUtils.C  SPELLframeManager.C  SPELLgoto.C  SPELLgotoPython.C  SPELLimportChecker.C  SPELLinterpreter.C  SPELLlnotab.C  SPELLscheduler.C  SPELLstepPython.C  SPELLvariableManager.C  SPELLvariableMonitor.C
lib/SPELL_IPC/: .cproject  .project  Makefile.am
lib/SPELL_IPC/src/: SPELLipcChannel.C  SPELLipcClientInterface.C  SPELLipcDataChunk.C  SPELLipcHelper.C  SPELLipcIncoming.C  SPELLipcInput.C  SPELLipcMessage.C  SPELLipcMessageMailbox.C  SPELLipcOutput.C  SPELLipcServerInterface.C  SPELLipcServerInterfaceSingle.C  SPELLipcTrash.C  SPELLsocket.C
lib/SPELL_LST/: .cproject  .project  Makefile.am
lib/SPELL_LST/src/: SPELLlistener.C  SPELLlistenerContext.C  SPELLlistenerGui.C
lib/SPELL_PRC/: .cproject  .project  Makefile.am
lib/SPELL_PRC/src/: SPELLprocess.C  SPELLprocessManager.C
lib/SPELL_PRD/: .cproject  .project  Makefile.am
lib/SPELL_PRD/src/: SPELLlibrary.C  SPELLprocedure.C  SPELLprocedureManager.C
lib/SPELL_SDB/: .cproject  .project  Makefile.am
lib/SPELL_SDB/src/: SPELLdatabase.C  SPELLdatabaseFactory.C  SPELLdatabaseFile.C  SPELLdatabaseFileSPB.C  SPELLpyDatabaseMethods.C  SPELLpyDatabaseModule.C
lib/SPELL_SYN/: .cproject  .project  Makefile.am
lib/SPELL_SYN/src/: SPELLconditionFactoryPOSIX.C  SPELLconditionPOSIX.C  SPELLevent.C  SPELLmutexFactoryPOSIX.C  SPELLmutexPOSIX.C  SPELLthread.C  SPELLthreadPool.C  SPELLthreadWorker.C  SPELLtimer.C
lib/SPELL_UTIL/: .cproject  .project  Makefile.am
lib/SPELL_UTIL/src/: SPELLcompression.C  SPELLerror.C  SPELLlog.C  SPELLlogPython.C  SPELLpyArgs.C  SPELLpythonHelper.C  SPELLtime.C  SPELLutils.C
lib/SPELL_WRP/: .cproject  .project  Makefile.am
lib/SPELL_WRP/src/: SPELLconfigDict.C  SPELLdatabaseManager.C  SPELLdriverManager.C  SPELLpyValue.C  SPELLregistry.C
lib/SPELL_WS/: .cproject  .project  Makefile.am
lib/SPELL_WS/src/: SPELLwsClassDataHandler.C  SPELLwsCustomTypeDataHandler.C  SPELLwsDataCodes.C  SPELLwsDataHandler.C  SPELLwsDataHandlerFactory.C  SPELLwsDbDataHandler.C  SPELLwsDictDataHandler.C  SPELLwsDynamicData.C  SPELLwsFrame.C  SPELLwsInstanceDataHandler.C  SPELLwsListDataHandler.C  SPELLwsObjectDataHandler.C  SPELLwsStaticData.C  SPELLwsStorage.C  SPELLwsTimeDataHandler.C  SPELLwsTmItemDataHandler.C  SPELLwsTupleDataHandler.C  SPELLwsWarmStartImpl.C  SPELLwsWorkingMode.C
procs/: .project  Makefile.am
procs/procedures/Examples/: Example_EQU.py
procs/userlib/: user_functions.py
rcp/: Makefile.am
src/: Makefile.am  common.mk  eclipse_plugin_build.sh
src/client-stubj/: .classpath  .project  README
src/context/: .cproject  .project  Makefile.am
src/context/src/: SPELLcontextMain.C
src/eclipse_build_templates/config/: allElements.xml  build.properties
src/eclipse_build_templates/feature/: .project  build.xml  feature.xml.part1  feature.xml.part2
src/executor/: .cproject  .project  Makefile.am
src/executor/arena/: compile_proc  deassemble.py  pmod  procedure.py  subprocedure.py
src/executor/src/: SPELLexecutorMain.C
src/executorcmd/: .cproject  .project  Makefile.am
src/executorcmd/src/: SPELLexecutorMain.C
src/listener/: .cproject  .project  Makefile.am
src/listener/src/: SPELLlistenerMain.C
src/shell/: .cproject  .project  Makefile.am
src/shell/src/: SPELLshellCallstack.H  SPELLshellCif.C  SPELLshellCif.H  (+6 more)
src/spel-gui/: Makefile.am
src/spell/: .project  .pydevproject  Makefile.am
(+1225 files in other folders)
